--- a/zypheris-satıs/index.html
+++ b/zypheris-satıs/index.html
@@ -223,7 +223,7 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="https://placehold.co/150x45?text=LOGO" alt="Logo">
+                    <img src="https://www.kisa.link/BSvaU" alt="Logo">
                 </div>
                 <p>&copy; 2025 Mağazamız. Tüm hakları saklıdır.</p>
             </div>
